[No-issue] Fix responsiveness for multi-viewport (#12)
* fix(mobile): resize book fonts and spacing for better mobile visibility

Read toggle padding was too close to delete book button. Added a thicker padding to decrease error
clicks.

* feat(book_card): add confirmation popup when deleting a book

This better prevents a user from removing their hard, entered book and not making it a pain to re-do
their progress.

* style(mobile): set up responsiveness for book addition form

Works with column grid breakpoints to offer a smooth experience on mobile and desktop as far as
usability goes by providing pleasant sizes to work with based on the viewport width.

* style(*): add icons for a bit of fancy styling

Icons added to the main functionality buttons. * Add a book, * Close form, * Add book to collection,
* Heading.

--- a/styles/content/book-card.css
+++ b/styles/content/book-card.css
@@ -28,8 +28,9 @@
   --side-pages-bottom-offset: calc(var(--book-container-height) * 0.05);
   --side-pages-right-offset: var(--side-pages-bottom-offset);
 
-  --book-title-font-size: calc(var(--book-container-width) * 0.105);
+  --book-title-font-size: calc(var(--book-container-width) * 0.11);
   --book-author-font-size: calc(var(--book-title-font-size) * 0.45);
+  --book-author-font-size: 14px;
   --book-pages-font-size: calc(var(--book-author-font-size) * 0.857);
   --book-control-container-font-size: var(--book-author-font-size);
 }
